# unique-pet-generation

./: .gitignore  LICENSE  README.md  document.txt  requirements.txt
configs/: base.yaml
docs/: index.html
face_extractor/: README.md  face_attributes_results.json  generate_pseudolabels.py  improve_extensions.py  requirements.txt
face_extractor/agus/: README.md
face_extractor/agus/models/: __init__.py  heads.py
face_extractor/agus/utils/: label_maps.py
face_extractor/clip_facemesh/: README.md
face_extractor/cnn_from_scratch/: finetune_extensions.py  generate_skin_pseudolabels.py  inference.py
face_extractor/cnn_from_scratch/checkpoints/: val_accuracy_cache.json  val_bias_cache.json
face_extractor/cnn_from_scratch/models/: backbone.py
face_extractor/cnn_from_scratch/utils/: __init__.py  color_analysis.py
face_extractor/kat/: README.md  pyproject.toml  requirements.txt
face_extractor/kat/notebooks/: 05_normalizacion_de_outputs.ipynb
face_extractor/kat/scripts/: download_celeba.py
face_extractor/kat/src/pet_gen/training/: metrics.py
face_extractor/resnet/notebooks/: output_raw.json  (+1 more)
face_extractor/vit/: README.md
notebooks/: 03_sagemaker_vit_training.ipynb  output_vit_flags.json
pet_generation/: README.md  mascota_generativa_v8.ipynb  pet_generation.ipynb
petly/: .gitignore  README.md
petly/backend/: .env.example  requirements.txt  run.ps1
petly/frontend/: index.html  package-lock.json  package.json
runs/May19_15-22-13_MacBook-Pro-131.local/: events.out.tfevents.1779196933.MacBook-Pro-131.local.23103.0
scripts/: inference.py
(+33 files in other folders)
