[project]
name = "pet-gen"
version = "0.1.0"
description = "Generate pets that resemble their human owners"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "facenet-pytorch>=2.5",
    "albumentations>=1.4",
    "omegaconf>=2.3",
    "tensorboard>=2.17",
    "kagglehub>=0.3",
    "scikit-learn>=1.5",
    "pillow>=10.0",
    "tqdm>=4.66",
    "matplotlib>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pet_gen"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
